--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ margin: 2rem 0rem
     background-color: #00FFE9;
     border-radius: 0.5rem;
     text-align: center;
+    position: relative;
 }
 
 .secondary-link {
@@ -43,6 +44,17 @@ margin: 2rem 0rem
     border-radius: 0.5rem;
     text-align: center;
     background-color: purple;
+    position: relative;
+    }
+
+    .primary-link:hover {
+        background: #0090FF;
+        color: black;
+    }
+
+    .secondary-link:hover{
+        background: gray;
+        color: black;
     }
 
 .non-bullet {
